bk_ida/gccida/c0/dbxout_symbol_name
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_symbol_name/src/dbxout.c:2844:7: error: expected expression
if (  struct suffix ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_symbol_name/src/dbxout.c:2847:7: error: use of undeclared identifier 'arg0'
v3 = &arg0; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dbxout_symbol_name/src/obj/dbxout.o] Error 1
